# assistant

./: .env.example  .gitignore  README.md  pyproject.toml  test.txt
scripts/: generate_codex_schemas.py
src/assistant/: __main__.py  closer.py  codex.py  codex_exec.py  codex_executor.py  config.py  container.py  db.py  deep_agent.py  deep_agent_service.py  discord.py  discord_codex_service.py  discord_service.py  discord_thread_links_repo.py  discord_thread_links_service.py  dishka_typing.py  events.py  execute_command.py  log.py  logger.py  logging_.py  models.py  opencode.py  parse_command_event.py  shutdown_signal.py  state_store.py  stop_signal.py
src/assistant/codex/: __init__.py  app_server.py  client.py  client_message_writer.py  client_notification.py  client_notification_sender.py  client_request.py  client_request_sender.py  codex.py  common.py  running_checker.py  server_message.py  server_message_reader.py
src/assistant/codex/app_server/: __init__.py  app_server.py  consumer.py  process.py  running_checker.py  stderr.py  stdin.py  stdout.py
src/assistant/codex/schemas/: apply_patch_approval_params.py  apply_patch_approval_response.py  chatgpt_auth_tokens_refresh_params.py  chatgpt_auth_tokens_refresh_response.py  client_notification.py  client_request.py  codex_app_server_protocol_schemas.py  codex_app_server_protocol_v2_schemas.py  command_execution_request_approval_params.py  command_execution_request_approval_response.py  dynamic_tool_call_params.py  dynamic_tool_call_response.py  exec_command_approval_params.py  exec_command_approval_response.py  file_change_request_approval_params.py  file_change_request_approval_response.py  fuzzy_file_search_params.py  fuzzy_file_search_response.py  fuzzy_file_search_session_completed_notification.py  fuzzy_file_search_session_updated_notification.py  jsonrpc_error.py  jsonrpc_error_error.py  jsonrpc_message.py  jsonrpc_notification.py  jsonrpc_request.py  jsonrpc_response.py  mcp_server_elicitation_request_params.py  mcp_server_elicitation_request_response.py  permissions_request_approval_params.py  permissions_request_approval_response.py  request_id.py  server_notification.py  server_request.py  tool_request_user_input_params.py  tool_request_user_input_response.py
src/assistant/codex/schemas/v1/: initialize_params.py  initialize_response.py
src/assistant/codex/schemas/v2/: __init__.py  account_login_completed_notification.py  account_rate_limits_updated_notification.py  account_updated_notification.py  agent_message_delta_notification.py  app_list_updated_notification.py  apps_list_params.py  apps_list_response.py  cancel_login_account_params.py  cancel_login_account_response.py  command_exec_output_delta_notification.py  command_exec_params.py  command_exec_resize_params.py  command_exec_resize_response.py  (+146 more)
src/assistant/event/: __init__.py  events.py  impl.py
tests/: test_codex.py
tests/codex/: test_app_server.py
