[project]
name = "assistant"
version = "0.0.0"
description = "My AI assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.7.1",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.8"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
include = ["src/**/*.py", "pyproject.toml"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "D",      # https://docs.astral.sh/ruff/rules/#pydocstyle-d
]

[tool.pyright]
typeCheckingMode = "strict"
reportImplicitOverride = true
include = ["src/**/*.py", "tests/**/*.py"]
executionEnvironments = [{ root = "tests", reportPrivateUsage = false }]
