[project]
name = "assistant"
version = "0.0.0"
description = "My AI assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.7.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
include = ["src/**/*.py", "pyproject.toml", "tests/**/*.py", "scripts/**/*.py"]
line-length = 80

[tool.ruff.lint]
ignore = [
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "D",      # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "TD002",  # https://docs.astral.sh/ruff/rules/missing-todo-author/
    "TD003",  # https://docs.astral.sh/ruff/rules/missing-todo-link/
    "FIX002", # https://docs.astral.sh/ruff/rules/line-contains-todo/
    "TRY004", # https://docs.astral.sh/ruff/rules/type-check-without-type-error/
    "TRY300", # https://docs.astral.sh/ruff/rules/try-consider-else/
    "TRY301", # https://docs.astral.sh/ruff/rules/raise-within-try/
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/
    "S101",   # https://docs.astral.sh/ruff/rules/assert/
    "SLF001", # https://docs.astral.sh/ruff/rules/private-member-access/
]

[tool.pyright]
typeCheckingMode = "strict"
reportImplicitOverride = true
include = ["src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
executionEnvironments = [{ root = "tests", reportPrivateUsage = false }]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["assistant"]
omit = ["src/*/__main__.py", "src/assistant/codex/schemas/**/*.py"]
